Add http storage (with hardcoded url, for testing purposes)
Co-authored-by: Mikhail Putilov <mikhail.putilov@adviqo.com>
Co-authored-by: Nikolai Preugschat <nikolai.preugschat@adviqo.com>
Co-authored-by: Eduardo Ducer <eduardo.ducer@adviqo.com>

--- a/testsuite/utils/pom.xml
+++ b/testsuite/utils/pom.xml
@@ -135,6 +135,10 @@
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-http-federation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
             <artifactId>keycloak-kerberos-federation</artifactId>
         </dependency>
         <dependency>
