--- a/federation/pom.xml
+++ b/federation/pom.xml
@@ -36,6 +36,7 @@
         <module>kerberos</module>
         <module>ldap</module>
         <module>sssd</module>
+        <module>http</module>
     </modules>
 
 </project>
